<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:theme="@style/AppTheme"
    android:layout_gravity="center"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/number"
        android:layout_width="match_parent"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:backgroundTint="#FBFBFB"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/_047467346347"
        android:gravity="center"
        android:textColor="@color/colorAccent"
        android:layout_height="wrap_content"/>
    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/Phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:backgroundTint="#FF4771"
        android:layout_marginTop="10dp"
        android:elevation="2dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:maxLength="15"
        android:focusable="true"
        android:fontFamily="@font/regulare"
        android:hint="@string/another_number"
        android:textColorHint="#706F6F"
        app:met_errorColor="#FF4771"
        app:met_floatingLabelAlwaysShown="true"
        app:met_floatingLabelTextSize="15sp"
        app:met_textColorHint="#BCB9B9" />
    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/colorPrimary"
        android:layout_height="wrap_content"
        android:text="@string/send_opt"
        />
</LinearLayout>