<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".first_home">
 <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F8F8FB"
        android:orientation="vertical"
        app:layoutDescription="@xml/activity_main_scene">
    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_purple" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/bold"
        android:gravity="center_vertical"
        android:text="@string/dating_app"
        android:textColor="#9673C5"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.323"
        tools:layout_editor_absoluteX="0dp">

        <hs.beta.dating.views.CustomPager
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="400dp" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/indicator"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:backgroundTint="#F8F8FB"
            android:clickable="false"
            app:tabBackground="@drawable/indicator_selector"
            app:tabGravity="center"
            app:tabIndicatorFullWidth="false"
            app:tabIndicatorHeight="0dp"
            app:tabMode="fixed"
            app:tabTextColor="#F0EFF8" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/getStarted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/btn_cercle"
            android:fontFamily="@font/bold"
            android:text="@string/get_started"
            android:textColor="#fff"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            app:tabRippleColor="@null" />

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="#F8F8FB"
            android:textColor="#393939"
            android:fontFamily="@font/regulare"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:gravity="center"
            android:text="@string/allready_have_an_account" />
    </LinearLayout>
    </androidx.constraintlayout.motion.widget.MotionLayout>
</FrameLayout>